--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^6.1.1
   cloud_firestore: ^6.0.3
   intl: ^0.19.0
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
