--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^6.0.3
   intl: ^0.19.0
   flutter_bloc: ^8.1.6
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
